--- a/app/ui/components/rails_ui/accordion_item/component.html.erb
+++ b/app/ui/components/rails_ui/accordion_item/component.html.erb
@@ -35,7 +35,7 @@
       role="region" 
       aria-labelledby="radix-:rpb:" 
       data-orientation="vertical" 
-      class="overflow-hidden text-sm transition-all data-[ui-accordion-open-value='false']:animate-accordion-up data-[ui-accordion-open-value='true']:animate-accordion-down">
+      class="overflow-hidden text-sm transition-all data-[ui-accordion-open-value='false']:animate-accordion-up data-[ui-accordion-open-value='true']:animate-accordion-down py-2">
     <%= content %>
   </div>
   
