--- a/test/dummy/app/assets/builds/application.css
+++ b/test/dummy/app/assets/builds/application.css
@@ -1,5 +1,6 @@
 /* ../../app/ui/components/rails_ui/accordion_item/index.css */
 /* ../../app/ui/components/rails_ui/alert/index.css */
+/* ../../app/ui/components/rails_ui/aspect_ratio/index.css */
 /* ../../app/ui/components/rails_ui/avatar/index.css */
 /* ../../app/ui/components/rails_ui/badge/index.css */
 /* ../../app/ui/components/rails_ui/breadcrumb/index.css */
@@ -8,10 +9,16 @@
 /* ../../app/ui/components/rails_ui/calendar/index.css */
 /* ../../app/ui/components/rails_ui/card/index.css */
 /* ../../app/ui/components/rails_ui/carousel/index.css */
+/* ../../app/ui/components/rails_ui/collapsible/index.css */
 /* ../../app/ui/components/rails_ui/command/index.css */
 /* ../../app/ui/components/rails_ui/dropdown_menu_item/index.css */
 /* ../../app/ui/components/rails_ui/progress/index.css */
+/* ../../app/ui/components/rails_ui/sheet/index.css */
 /* ../../app/ui/components/rails_ui/skeleton/index.css */
 /* ../../app/ui/components/rails_ui/table/index.css */
 /* ../../app/ui/components/rails_ui/tabs/index.css */
+/* ../../app/ui/components/rails_ui/toast/index.css */
+/* ../../app/ui/components/rails_ui/toast_item/index.css */
+/* ../../app/ui/components/rails_ui/toggle/index.css */
+/* ../../app/ui/components/rails_ui/tooltip/index.css */
 /*# sourceMappingURL=data:application/json;base64,ewogICJ2ZXJzaW9uIjogMywKICAic291cmNlcyI6IFtdLAogICJzb3VyY2VzQ29udGVudCI6IFtdLAogICJtYXBwaW5ncyI6ICIiLAogICJuYW1lcyI6IFtdCn0K */
