--- a/app/views/rails_ui/playground/sections/_button.html.erb
+++ b/app/views/rails_ui/playground/sections/_button.html.erb
@@ -8,15 +8,54 @@
   <% end %>
 <% end %>
 
-<div>
-  <h3 class="text-lg text-red-400 font-medium mb-2">Default Button</h3>
-  <%= render(RailsUi::Button::Component.new(title: "Oliii")) { "Default Button" } %>
-</div>
 
-<div>
-  <h3 class="text-lg font-medium mb-2">Secondary Large Button</h3>
-  <%= render(RailsUi::Button::Component.new(variant: :secondary, size: :lg)) { "Secondary Large Button" } %>
-</div>
+<%= render(RailsUi::ComponentPreview::Component.new(title: "Default Button")) do |component| %>
+  <% component.with_example do %>
+    <%= render(RailsUi::Button::Component.new(title: "Oliii")) { "Default Button" } %>
+  <% end %>
+
+  <% component.with_code do %>
+    render(RailsUi::Button::Component.new(title: "Oliii")) { "Default Button" } 
+  <% end %>
+<% end %>
+
+
+<%= render(RailsUi::ComponentPreview::Component.new(title: "Secondary Large Button")) do |component| %>
+  <% component.with_example do %>
+    <%= render(RailsUi::Button::Component.new(variant: :secondary, size: :lg)) { "Secondary Large Button" } %>
+  <% end %>
+
+  <% component.with_code do %>
+    render(RailsUi::Button::Component.new(variant: :secondary, size: :lg)) { "Secondary Large Button" }
+  <% end %>
+<% end %>
+
+
+<%= render(RailsUi::ComponentPreview::Component.new(title: "Button with Icon")) do |component| %>
+  <% component.with_example do %>
+    <%= render(RailsUi::Button::Component.new) do |component| %>
+      <% component.icon do %>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-8.707l-3-3a1 1 0 00-1.414 1.414L10.586 9H7a1 1 0 100 2h3.586l-1.293 1.293a1 1 0 101.414 1.414l3-3a1 1 0 000-1.414z" clip-rule="evenodd" />
+        </svg>
+      <% end %>
+      Button with Icon
+    <% end %>
+  <% end %>
+
+  <% component.with_code do %>
+
+    <%= render(RailsUi::Button::Component.new) do |component| %>
+      <% component.icon do %>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-8.707l-3-3a1 1 0 00-1.414 1.414L10.586 9H7a1 1 0 100 2h3.586l-1.293 1.293a1 1 0 101.414 1.414l3-3a1 1 0 000-1.414z" clip-rule="evenodd" />
+        </svg>
+      <% end %>
+      Button with Icon
+    <% end %>
+  <% end %>
+<% end %>
+
 
 <div>
   <h3 class="text-lg font-medium mb-2">Button with Icon</h3>
