--- a/app/views/rails_ui/playground/_nav.erb
+++ b/app/views/rails_ui/playground/_nav.erb
@@ -47,6 +47,7 @@
     { title: "Resizable", type: "link"},
     { title: "Scroll Area", type: "link"},
     { title: "Select", type: "link"},
+    { title: "Simple Editor", type: "link"},
     { title: "Separator", type: "link"},
     { title: "Sheet", type: "link"},
     { title: "Skeleton", type: "link"},
