--- a/app/views/rails_ui/playground/sections/_introduction.html.erb
+++ b/app/views/rails_ui/playground/sections/_introduction.html.erb
@@ -1,5 +1,5 @@
 <%= render RailsUi::Markdown::Component.new do %>
   <div data-ui-markdown-target="content" class="prose dark:prose-invert">
-    <%= File.open(RailsUi::Engine.root.join "README.md").read %>
+    <%= raw File.open(RailsUi::Engine.root.join "README.md").read %>
   </div>
 <% end %>
