--- a/app/views/rails_ui/playground/sections/_input.html.erb
+++ b/app/views/rails_ui/playground/sections/_input.html.erb
@@ -4,6 +4,8 @@
   form_model.valid?
 %>
 
+based on https://originui.com/inputs
+
 
 
 <%= form_with(model: form_model, url: "/#", builder: RailsUi::FormHelper) do |form| %>
