--- a/app/views/rails_ui/playground/show.erb
+++ b/app/views/rails_ui/playground/show.erb
@@ -8,14 +8,14 @@
     <p>No content available for this section.</p>
   <% end %>
 
-  <div class="flex justify-between">
-    <%= render(RailsUi::Button::Component.new(variant: :outline, size: :sm)) do  %>
+  <div class="flex justify-between mt-4">
+    <%= render(RailsUi::Link::Component.new(action: prev_section , variant: :outline, size: :sm)) do  %>
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left"><path d="m15 18-6-6 6-6"/></svg>
       Previous
 
     <% end %>
 
-    <%= render(RailsUi::Button::Component.new(variant: :outline, size: :sm)) do %>
+    <%= render(RailsUi::Link::Component.new(action: next_section, variant: :outline, size: :sm)) do %>
       Next
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg>
     <% end %>
