--- a/app/views/layouts/rails_ui/application.html.erb
+++ b/app/views/layouts/rails_ui/application.html.erb
@@ -11,7 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-erb.min.js"></script>
   <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-  <% # stylesheet_link_tag  "application", media: "all" %>
+  <%= stylesheet_link_tag  "application", media: "all" %>
   <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
 
 </head>
